# CPP_template

./: .gitignore  README.md  backupCMakeLists.txt  buildScript.sh
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  main.cpp
